--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,10 @@
+/*
+ * Created by Inuwa Ibrahim on 17/03/2022, 7:43 PM
+ *     https://linktr.ee/Ibrajix
+ *     Copyright (c) 2022.
+ *     All rights reserved.
+ */
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
