--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,10 @@
+/*
+ * Created by Inuwa Ibrahim on 17/03/2022, 7:43 PM
+ *     https://linktr.ee/Ibrajix
+ *     Copyright (c) 2022.
+ *     All rights reserved.
+ */
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
