--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,10 @@
+#
+# Created by Inuwa Ibrahim on 17/03/2022, 7:43 PM
+#     https://linktr.ee/Ibrajix
+#     Copyright (c) 2022.
+#     All rights reserved.
+#
+
 # Project-wide Gradle settings.
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
