--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,3 +1,10 @@
+#
+# Created by Inuwa Ibrahim on 17/03/2022, 7:43 PM
+#     https://linktr.ee/Ibrajix
+#     Copyright (c) 2022.
+#     All rights reserved.
+#
+
 #Thu Mar 10 15:02:02 WAT 2022
 distributionBase=GRADLE_USER_HOME
 distributionUrl=https\://services.gradle.org/distributions/gradle-7.2-bin.zip
